--- a/client/src/components/Login-Signup/login-signup.css
+++ b/client/src/components/Login-Signup/login-signup.css
@@ -14,7 +14,7 @@ body {
     border-radius: 20px;
 }
 
-.login_header{
+.login_header, .signup_header{
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -23,7 +23,7 @@ body {
     margin-top: 15px;
 }
 
-.signin_text{
+.signin_text, .signup_text{
     color: #333333;
     font-size: 35px;
     font-weight: 500;
